Tue Aug  5 17:49:54 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (variable_defined): Mark variable is seen, even if
	only conditionally seen.

	* Makefile.am: Check for bad splits.
	* automake.in (various): Use split(' ',...), not split(/ /,...).

Tue Aug  5 14:08:51 1997  Ian Lance Taylor  <ian@cygnus.com>

	* ylwrap: If the program is a relative path, force it to be
	absolute.

Tue Aug  5 16:59:41 1997  Tom Tromey  <tromey@cygnus.com>

	* missing: Examine A[CM]_CONFIG_HEADER for name of files to
	touch.  From Markus F.X.J. Oberhumer.

	* automake.in (require_file_internal): Better error message when
	installing.

	* automake.in (handle_texinfo): Smarter test when deleting output
	of makeinfo.

Sat Aug  2 13:32:45 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (do_check_merge_target): In --cygnus mode, check
	doesn't depend on all.

	* automake.in (output_yacc_build_rule): Use YACCFLAGS, not
	YFLAGS.  Per GNU Standards.

	* dejagnu.am (RUNTESTDEFAULTFLAGS): New macro.
	(check-DEJAGNU): Use it.

	* subdirs.am (maintainer-clean-recursive): Actually reverse subdir
	list.  From Alexander Lukyanov.

	* automake.in (initialize_global_constants): Changed generated
	copyright.  From RMS.

	* automake.in (handle_configure): Pass correct value for
	CONFIG_FILES.  From Ian Taylor.

Thu Jul 31 17:36:10 1997  Ian Lance Taylor  <ian@cygnus.com>

	* ylwrap (pairlist): Shift out trailing "--"; don't pass it to
	$prog.

Thu Jul 24 00:52:02 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (initialize_global_constants): Changed index names
	in dist hash so that alternate dist targets will be generated.
	Report from Glenn Amerine.

	Suggestion from Karl Berry:
	* automake.in (usage): Added short info line.

	* aclocal.in (usage): Updated bug-reporting address.  Added short
	info line.

	* automake.in (handle_emacs_lisp): Put contents of lisp-clean.am
	into output.  Report from Karl Berry.

Sun Jun 22 14:01:59 1997  Tom Tromey  <tromey@cygnus.com>
