@@ -1809,7 +1809,8 @@ sub check_typos
     local ($varname, $primary);
     foreach $varname (keys %contents)
     {
-	foreach $primary ('_SOURCES', '_LIBADD', '_LDADD', '_LDFLAGS', '_DEPENDENCIES')
+	foreach $primary ('_SOURCES', '_LIBADD', '_LDADD', '_LDFLAGS',
+			  '_DEPENDENCIES')
 	{
 	    if ($varname =~ /$primary$/ && ! $content_seen{$varname})
 	    {
@@ -4694,6 +4695,11 @@ sub value_to_list
 	if (/^\$\{([^}]*)\}$/ || /^\$\(([^)]*)\)$/)
 	{
 	    local ($varname) = $1;
+
+	    # If the user uses a losing variable name, just ignore it.
+	    # This isn't ideal, but people have requested it.
+	    next if ($varname =~ /\@.*\@/);
+
 	    local ($from, $to);
 	    local (@temp_list);
 	    if ($varname =~ /^([^:]*):([^=]*)=(.*)$/)
