@@ -1,5 +1,8 @@
 Tue Aug  5 17:49:54 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (value_to_list): If variable name contains configure
+	substitution, then just ignore it.
+
 	* automake.in (variable_defined): Mark variable is seen, even if
 	only conditionally seen.
 
